--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-animate": "~1.3.2",
     "angular-bootstrap": "~0.11.0",
     "angular-ui-router": "~0.2.10",
-    "angular-sanitize": "~1.3.12"
+    "angular-sanitize": "~1.3.12",
+    "angular-cookies": "~1.3.15"
   }
 }
