--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "bugs": "https://github.com/JonathanZWhite/compass.git/issues",
   "dependencies": {
-   "async": "^0.9.0",
+    "async": "^0.9.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.10.2",
     "express": "^4.11.1",
@@ -18,7 +18,10 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "crypto": "0.0.3",
-    "nodemailer": "^1.3.4"
+    "nodemailer": "^1.3.4",
+    "cookie-parser": "^1.3.4",
+    "connect-mongo": "^0.8.1",
+    "express-session": "^1.11.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
